# MaiEcho

./: .gitignore  README.md
maiecho_py/: README.md  main.py  pyproject.toml
maiecho_py/config/: config.example.yaml
maiecho_py/docs/: tech-selection.md
maiecho_py/prompts/: prompts.yaml
maiecho_py/src/maiecho_py/: __init__.py  app.py
maiecho_py/src/maiecho_py/cmd/maiecho/: __init__.py  main.py
maiecho_py/src/maiecho_py/internal/: __init__.py  container.py
maiecho_py/src/maiecho_py/internal/agent/: mapper.py  pipeline.py  relevance.py
maiecho_py/src/maiecho_py/internal/collector/: __init__.py  base.py  bilibili.py  discovery.py
maiecho_py/src/maiecho_py/internal/config/: __init__.py  loader.py  models.py  prompts.py
maiecho_py/src/maiecho_py/internal/controller/: analysis_controller.py  collector_controller.py  song_controller.py  status_controller.py
maiecho_py/src/maiecho_py/internal/llm/: __init__.py  client.py
maiecho_py/src/maiecho_py/internal/logger/: logger.py
maiecho_py/src/maiecho_py/internal/model/: __init__.py  base.py  entities.py
maiecho_py/src/maiecho_py/internal/provider/: registry.py
maiecho_py/src/maiecho_py/internal/router/: api.py
maiecho_py/src/maiecho_py/prompts/: prompts.yaml
maiecho_py/tests/: test_alias_suitability.py  test_analysis_api.py  test_app.py  test_bilibili_collector.py  test_collector_api.py  test_divingfish_provider.py  test_failure_observability.py  test_mapper_and_discovery.py  test_scheduler_orchestration.py  test_song_service_and_api.py  test_status_observability.py  test_storage.py
(+12 files in other folders)
